fixed the uneven boxes

--- a/css/Menus.css
+++ b/css/Menus.css
@@ -31,7 +31,7 @@
      display: flex;
      background-color: #5B9676;
      padding: 0.1%;
-     padding-right: 200px;
+     padding-right: 300px;
      margin: 1%;
      max-width: 300px;
  }
@@ -42,9 +42,22 @@
  }
 
  .green>a>img {
-    max-width: 100%;
+    max-width: 300px;
+    /* min-width: -webkit-fill-available; */
+    max-height: 300px;
     height: auto;
+    padding-top: 1%;
+    padding-left: 1%;
     padding-right: 12.5%;
+}
+
+.center{
+    display: inline-flex;
+    flex-direction: column;
+    /* padding-left: 10%; */
+    min-width: -webkit-fill-available;
+    align-items: center;
+    justify-content: center;
 }
 
  .green>p {
